// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component if controlled renders correctly 1`] = `
<RadioInputWrapper>
  <FormLabel
    className="nowrap"
  >
    Radio label
  </FormLabel>
  <RadioInput
    key="cat"
  >
    <input
      defaultChecked={true}
      id="radioName_cat"
      name="radioName"
      onChange={[Function]}
      type="radio"
      value="cat"
    />
    <RadioInputLabel
      htmlFor="radioName_cat"
      inputStyle="button"
    >
      Cat
    </RadioInputLabel>
  </RadioInput>
  <RadioInput
    key="dog"
  >
    <input
      defaultChecked={false}
      id="radioName_dog"
      name="radioName"
      onChange={[Function]}
      type="radio"
      value="dog"
    />
    <RadioInputLabel
      htmlFor="radioName_dog"
      inputStyle="button"
    >
      Dog
    </RadioInputLabel>
  </RadioInput>
</RadioInputWrapper>
`;

exports[`Radio component if uncontrolled renders correctly 1`] = `
<RadioInputWrapper>
  <FormLabel
    className="nowrap"
  >
    Radio label
  </FormLabel>
  <RadioInput
    key="cat"
  >
    <input
      defaultChecked={true}
      id="radioName_cat"
      name="radioName"
      onChange={[Function]}
      type="radio"
      value="cat"
    />
    <RadioInputLabel
      htmlFor="radioName_cat"
      inputStyle="plain"
    >
      Cat
    </RadioInputLabel>
  </RadioInput>
  <RadioInput
    key="dog"
  >
    <input
      defaultChecked={false}
      id="radioName_dog"
      name="radioName"
      onChange={[Function]}
      type="radio"
      value="dog"
    />
    <RadioInputLabel
      htmlFor="radioName_dog"
      inputStyle="plain"
    >
      Dog
    </RadioInputLabel>
  </RadioInput>
</RadioInputWrapper>
`;
